--- a/GuideMvvm/GuideMvvm/GuideMvvm.csproj
+++ b/GuideMvvm/GuideMvvm/GuideMvvm.csproj
@@ -19,5 +19,8 @@
     <EmbeddedResource Update="Views\InitialPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\SecondPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
